--- a/desktop-messenger/renderer/index.html
+++ b/desktop-messenger/renderer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' ws: wss: http: https:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: http://localhost:*; connect-src 'self' ws: wss: http: https:;">
     <title>Social Network Messenger</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="manifest" href="manifest.json">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="sidebar-actions">
                         <button id="logout-btn" class="btn btn-secondary" title="Logout">
-                            <span>⚙️</span>
+                            <span>Logout</span>
                         </button>
                     </div>
                 </div>
@@ -143,10 +143,10 @@
     <!-- Scripts -->
     <script src="scripts/web-compat.js"></script>
     <script src="scripts/utils.js"></script>
-    <script src="scripts/auth.js"></script>
-    <script src="scripts/chat.js"></script>
     <script src="scripts/storage.js"></script>
     <script src="scripts/websocket.js"></script>
+    <script src="scripts/auth.js"></script>
+    <script src="scripts/chat.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
