feat: add theme toggle button and include theme script

--- a/desktop-messenger/renderer/index.html
+++ b/desktop-messenger/renderer/index.html
@@ -67,6 +67,9 @@
                         </div>
                     </div>
                     <div class="sidebar-actions">
+                        <button id="theme-toggle-btn" class="btn btn-icon" title="Toggle theme">
+                            <span id="theme-icon">🌙</span>
+                        </button>
                         <button id="logout-btn" class="btn btn-secondary" title="Logout">
                             <span>Logout</span>
                         </button>
@@ -144,6 +147,7 @@
     <script src="scripts/web-compat.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/storage.js"></script>
+    <script src="scripts/theme.js"></script>
     <script src="scripts/websocket.js"></script>
     <script src="scripts/auth.js"></script>
     <script src="scripts/chat.js"></script>
